--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vite": "^4.5.5",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "date-fns": "^2.29.3",
@@ -40,7 +41,6 @@
     "install": "^0.13.0",
     "postcss": "^8.4.23",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.3.1",
-    "vite": "^4.5.5"
+    "tailwindcss": "^3.3.1"
   }
 }
