--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@vitejs/plugin-react": "^3.1.0",
     "axios": "^1.4.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
@@ -23,7 +24,7 @@
     "react-router-dom": "^6.10.0",
     "sweetalert2": "^11.10.5",
     "vite": "^4.5.5",
-    "@vitejs/plugin-react": "^3.1.0"
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -40,7 +41,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "install": "^0.13.0",
     "postcss": "^8.4.23",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.3.1"
+    "prettier": "^3.2.5"
   }
 }
