--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.4.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
@@ -23,13 +24,12 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "sweetalert2": "^11.10.5",
-    "vite": "^4.5.5",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "vite": "^4.5.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "autoprefixer": "^10.4.14",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
