--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server/server.js",
     "dev": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i --force && cd ../client && npm i --force",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build && cp -r ./dist/assets ../server/public && cp ./dist/index.html ../server/public"
   },
   "keywords": [],
   "author": "",
